# PicoBoot

./: .gitignore  .gitmodules  CMakeLists.txt  MIT-LICENSE.md  PROGRAM_MAP.txt  README.md  TODO.md  memmap.ld
.cache/clangd/index/: blockdevice.h.762997FBD7105003.idx  dirent.h.D85CEC4E0B288AF1.idx  diskio.h.D22BC38C2783AB5A.idx  fat.c.E006FC8E46805ED8.idx  fat.h.74ACAA77E7E1F10B.idx  ff.c.28B437BF830D3271.idx  ff.h.CC257ADBB7783AEB.idx  ffconf.h.FF8B6333EDFF70FF.idx  ffsystem.c.3EFFCAF459DD4378.idx  ffunicode.c.4220F43FC1DB945E.idx  filesystem.h.16539602AABD44A3.idx  loader.h.F4F4E2BAE8284F15.idx  loader.s.F6EF1C464E5D9892.idx  main.c.085172C559D30A12.idx  sd.c.83553377C6E48422.idx  sd.h.00B77A2FD2DCA84C.idx  vfs.c.F7C9753B4B13C62D.idx  vfs.h.2BD74F11EFD01244.idx
.woodpecker/: woodpecker.yaml  woodpecker.yml  workflow.yaml
Conf/: conf.h
Src/: main.c
Src/ASM/: exec.h  exec.s  loader.h  loader.s
Src/ConfigParser/: config_parser.c  config_parser.h
Src/Err/: err.c  err.h
Src/Filesystem/: filesystem.c  filesystem.h
Src/Linker/: linkerscript.h  memmap_bootloader.ld
Src/Loader/: loader.c  loader.h
Src/Loader/ASM/: exec.h  exec.s
